# spotlive

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
spotlive/: spotify.py  spotlive.py  ticketmaster.py
spotlive/cli/: cli.py  spot_cli.py
spotlive/cli/from_config/: from_config.py
spotlive/cli/update/: update.py
test/: test_config.json
