#
[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "SpotLive"
dynamic = ["version"]
dependencies = [
    "spotipy",
    "geopy",
    "ticketpy",
    "Click"
    ]

[project.scripts]
spots = "cli.cli:update_from_json"