[metadata]
name = SpotLive
version = attr: SpotLive.__version__
author = Connor Dibble
author_email = cddibble@gmail.com
url = 'https://github.com/cdibble/SpotLive'
description = Create and update Spotify playlists based on Upcoming Live Shows
long_description = file: README.md
long_description_content_type = text/markdown
keywords = SpotLive, spotify, ticketmaster
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir=
    =SpotLive

[options.packages.find]
where=SpotLive

[options.extras_require]
notebook = jupyter>=1.0.0; matplotlib
dev = 
    black==22.1.0
    flake8==4.0.1
